--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.application.name=web-assignment
+server.port=8080
+ip=localhost
+protocol=http
+address=${protocol}://${ip}:${server.port}/
